--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 </head>
 <body>
 <div align="center">
-    <h3>Matrix Redesigned by <i>Arunkumar Gudelli</i></h3>
+    <h3>Matrix Redesigned by <i>Anas Moin</i></h3>
     <canvas id="q" width="500" height="500">Sorry Browser Won't Support</canvas><br/><br/>
-    <button id="play">Play</button>
-    <button id="pause">pause</button>
 </div>
 <script>
     $(document).ready(function(){
