--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div align="center">
-    <h3>Matrix Redesigned by <i>Anas Moin</i></h3>
+    <h3>Matrix Redesigned by <strong>Anas Moin</strong></h3>
     <canvas id="q" width="500" height="500">Sorry Browser Won't Support</canvas><br/><br/>
 </div>
 <script>
