--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             ctx.fillStyle='rgba(0,0,0,.05)';
             ctx.fillRect(0,0,width,height);
             ctx.fillStyle='#0F0';
-            ctx.font = '10pt Georgia';
+            ctx.font = '10pt Faux Chinese';
             yPositions.map(function(y, index){
                 text = String.fromCharCode(1e2+Math.random()*33);
                 x = (index * 10)+10;
