--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <meta charset="utf-8">
-    <title>Matrix</title>
+    <title>Anas Moin</title>
 </head>
 <body>
 <div align="center">
@@ -18,7 +18,7 @@
 
         var draw = function () {
             ctx.fillStyle='rgba(0,0,0,.05)';
-            ctx.fillRect(0,0,height,width);
+            ctx.fillRect(0,0,width,height);
             ctx.fillStyle='#0F0';
             ctx.font = '10pt Georgia';
             yPositions.map(function(y, index){
