--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div align="center">
-    <h3>Matrix Redesigned by <strong>Anas Moin</strong></h3>
+    <h3>Welcome to Matrix <strong>Anas Moin</strong></h3>
     <canvas id="q" height="641" width="1366">Sorry Browser Won't Support</canvas><br/><br/>
 </div>
 <script>
